--- a/modules/adminxx/todo.txt
+++ b/modules/adminxx/todo.txt
@@ -48,3 +48,12 @@ confuse the two.
 
 
 
+Добрый день, меня зовут Алексей, я работаю в лаборатории ХНУВС.
+Зав. лабораторией Коршенко поручил мне вплотную заняться авторизацией с использованием ЭЦП.
+Нам надо, чтобы при авторизации пользователя, когда он логинится на сайт Освітній портал Нацполиции, у него бы
+запрашивался и проверялся ключ ЭЦП (наверное каким-то js-скриптом), и если ЭЦП действительна, то нам бы возвращалась
+информация о пользователе (например Ф.И.О. + email) для сравнения с данными нашего сервера и проведения
+дальнейшей авторизации. Я правильно понимаю процесс? Если да, то с чего нам начать?
+
+
+
